<resources>
    <string name="app_name">SkySense</string>
    <string name="prefs_file">com.infinitegearstudio.skysense.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">351045326464-kj5p8udo3nfnlaam48sm1n4oaofhshnb.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    //Strings para authactivity

    <string name="etSingUp">-------------Sing Up-------------</string>

    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etRePasswordEmail">Repeat password</string>

    <string name="btSignUp">Sing Up</string>
    <string name="btLogin">Log in</string>

    <string name="btGoogle">Google</string>


    <string name="tvContract">-------------Contract-------------</string>
    <string name="cbTerms">I have read and accept the terms and conditions of service.</string>
    <string name="tvTermsAndConditions">Terms and Conditions</string>

    //Strings para settings

    <string name="tvStation">Station</string>
    <string name="tvSensorDht22">Dht22</string>
    <string name="tvSensorBmp208">Bmp208</string>
    <string name="tvSensorLm393">Lm393</string>


    <string name="swOn">Switched on</string>
    <string name="tvRatio">Refreshment Ratio</string>

    <string name="tvDht22">humidity and temperature control</string>
    <string name="tvbmp280">pressure and temperature control</string>
    <string name="tvLm393">light intensity control</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    //String para bar de fragments

    <string name="hygrometer">hygrometer</string>
    <string name="photometer">photometer</string>
    <string name="thermometer">thermometer</string>
    <string name="barometer">barometer</string>
    <string name="settings">settings</string>
    <string name="logOut">Log Out</string>


    //Strings para sobre nosotros

    <string name="aboutus">About us</string>
    <string name="aboutuscont">Welcome to SkySense, your personal weather companion. At SkySense, we are passionate about providing you with accurate and detailed weather information so that you are always prepared for any weather condition.</string>

    <string name="mission">Mission</string>
    <string name="missioncont">Our mission at SkySense is to provide users with a unique and personalized weather experience. We strive to make weather information accessible, understandable and valuable to everyone. We want to help you plan your day, your week or your outdoor adventures with complete confidence.</string>

    <string name="Contactus">Contact us</string>
    <string name="Contactuscont">Do you have any questions, comments or suggestions? We would love to hear from you. You can contact us at [your email address] or follow us on our social networks: [links to social networks].</string>


</resources>