<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">




    <fragment
        android:id="@+id/nav_home"
        android:name="com.infinitegearstudio.skysense.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.infinitegearstudio.skysense.ui.gallery.GalleryFragment"
        android:label="@string/photometer"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_start"
        android:name="com.infinitegearstudio.skysense.ui.slideshow.SlideshowFragment"
        android:label="@string/thermometer"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.infinitegearstudio.skysense.ui.logout.logOutFragment"
        android:label="@string/logOut"
        tools:layout="@layout/fragment_log_out" />

    <fragment
        android:id="@+id/nav_thermometer"
        android:name="com.infinitegearstudio.skysense.ui.termometer.TermometerFragment"
        android:label="@string/thermometer"
        tools:layout="@layout/fragment_termometer" />

    <fragment
        android:id="@+id/nav_hygrometer"
        android:name="com.infinitegearstudio.skysense.ui.higrometer.higrometerFragment"
        android:label="@string/hygrometer"
        tools:layout="@layout/fragment_higrometer" />

    <fragment
        android:id="@+id/nav_barometer"
        android:name="com.infinitegearstudio.skysense.ui.barometer.BarometerFragment"
        android:label="@string/barometer"
        tools:layout="@layout/fragment_barometer" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.infinitegearstudio.skysense.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.infinitegearstudio.skysense.ui.aboutus.AboutusFragment"
        android:label="@string/aboutus"
        tools:layout="@layout/fragment_aboutus" />


</navigation>